[gd_scene load_steps=4 format=3 uid="uid://cggug24gatvd"]

[ext_resource type="Script" path="res://src/states/menu/credits_menu.gd" id="1_bo6n4"]

[sub_resource type="LabelSettings" id="LabelSettings_vdnnc"]
font_size = 69

[sub_resource type="LabelSettings" id="LabelSettings_shsbi"]
font_size = 36

[node name="CreditsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bo6n4")

[node name="Credits" type="Control" parent="."]
layout_mode = 1
anchor_right = 0.394
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 64.0
offset_right = -8.32004
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = true

[node name="V" type="VBoxContainer" parent="Credits"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="Credits/V"]
layout_mode = 2
text = "Credits"
label_settings = SubResource("LabelSettings_vdnnc")
horizontal_alignment = 1

[node name="Label" type="Label" parent="Credits/V"]
layout_mode = 2
text = "Terry Hearst - Everything so far lol"
horizontal_alignment = 1

[node name="Licenses" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.394
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.67996
offset_top = 16.0
offset_right = -16.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = true

[node name="LicensesTitle" type="Label" parent="Licenses"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 8.0
offset_bottom = 61.0
grow_horizontal = 2
text = "Licenses"
label_settings = SubResource("LabelSettings_shsbi")
horizontal_alignment = 1

[node name="LicensesLabel" type="RichTextLabel" parent="Licenses"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 59.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
bbcode_enabled = true
metadata/_edit_layout_mode = 1

[node name="BackButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 116.0
offset_bottom = 47.0
text = "Back"

[node name="LicensesButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -216.0
offset_top = -47.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
text = "View All Licenses"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="LicensesButton" to="." method="_on_licenses_button_pressed"]
